#richard: mms
