# docs/swagger.json
@@ -268,6 +268,12 @@
                         "description": "状态",
                         "name": "status",
                         "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "层级",
+                        "name": "level",
+                        "in": "query"
                     }
                 ],
                 "responses": {
